Change /search-books to return books in the same format as other routes and add availablity as a query parameter
